updated FE, BE
- upgrade FE page "job results"
- upgraded BE endpoints