@@ -2,6 +2,7 @@ package cz.cuni.mff.fdfinder.fdepservice;
 
 import cz.cuni.mff.algorithms.fdep_spark.FdepSpark;
 import cz.cuni.mff.algorithms.fdep_spark.model._FunctionalDependency;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cloud.client.ServiceInstance;
 import org.springframework.cloud.client.discovery.DiscoveryClient;
 import org.springframework.core.io.Resource;
@@ -9,6 +10,7 @@ import org.springframework.core.io.UrlResource;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.client.MultipartBodyBuilder;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestClient;
 
@@ -17,6 +19,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.Serializable;
 import java.nio.file.*;
+import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Queue;
 import java.util.concurrent.*;
@@ -30,12 +34,14 @@ public class FdepServiceService {
     private final DiscoveryClient discoveryClient;
     private final RestClient restClient;
 
-    private final Queue<Long> queue = new ConcurrentLinkedQueue<>();
+    private final Queue<JobDto> queue = new ConcurrentLinkedQueue<>();
     private final ExecutorService executor = Executors.newSingleThreadExecutor();
 
-    private volatile Future<?> currentJob;
-    private volatile Long currentJobId;
+    private volatile Future<?> currentJobFuture;
+    private volatile JobDto currentJob;
     private final AtomicBoolean running = new AtomicBoolean(false);
+
+    private final JobMonitorService monitorService = new JobMonitorService();
 
     public FdepServiceService(DiscoveryClient discoveryClient, RestClient.Builder restClientBuilder) {
 
@@ -43,9 +49,9 @@ public class FdepServiceService {
         this.restClient = restClientBuilder.build();
     }
 
-    public void registerNewJob(Long jobId) {
+    public void registerNewJob(JobDto job) {
 
-        this.queue.offer(jobId);
+        this.queue.offer(job);
         System.out.println("FDEP - QUEUE: " + this.queue.size());
         if (!running.get()) {
             startNext();
@@ -54,34 +60,34 @@ public class FdepServiceService {
 
     private void startNext() {
 
-        Long id = this.queue.poll();
-        System.out.println("FDEP - ID poll: " + id);
-        if (id == null) {
+        JobDto job = this.queue.poll();
+        System.out.println("FDEP - ID poll: " + job.getId());
+        if (job == null) {
 
-            currentJobId = null;
             currentJob = null;
+            currentJobFuture = null;
             return;
         }
 
         running.set(true);
-        currentJobId = id;
-        currentJob = executor.submit(() -> {
+        currentJob = job;
+        currentJobFuture = executor.submit(() -> {
             try {
-                System.out.println("FDEP - STARTING JOB: " + id);
+                System.out.println("FDEP - STARTING JOB: " + job.getId());
 
-                JobResultsFDs jb = runJob(currentJobId);
-                processResult(jb);
+                List<JobResultsFDs> jb = runJob(currentJob);
+                //processResults(jb);
             }
             catch (Throwable t) {
                 System.out.println("FDEP - ERROR: " + t.getMessage());
                 t.printStackTrace();
             }
             finally {
-                System.out.println("FDEP - FINISHED JOB: " + id);
+                System.out.println("FDEP - FINISHED JOB: " + job.getId());
 
                 running.set(false);
-                currentJobId = null;
                 currentJob = null;
+                currentJobFuture = null;
                 startNext();
             }
         });
@@ -93,114 +99,168 @@ public class FdepServiceService {
             List<_FunctionalDependency> foundFds
     ) implements Serializable {};
 
-    private JobResultsFDs runJob(Long jobId) {
-        ServiceInstance serviceInstanceJob = discoveryClient.getInstances("jobservice").get(0);
-        JobResult jobResult = new JobResult(jobId);
-        JobResultsFDs jobResultsFDs;
-        updateStatus(jobId, JobStatus.RUNNING, serviceInstanceJob);
-        System.out.println("FDEP - JOB running: " + jobId);
+    private List<JobResultsFDs> runJob(JobDto job) {
+        ServiceInstance serviceInstanceJob = discoveryClient.getInstances("jobservice").getFirst();
+
+        List<JobResultsFDs> jobResultsFDs = generateOutputJobResults(job.getJobResults());
+        JobResult currentJobResult = null;
+
+
         try {
+            System.out.println("Downloading dataset...");
+            DatasetData datasetData = getMetadataAndDownloadDataset(job);
 
-            // get metadata about JOB
-            JobDto job = restClient.get()
-                    .uri(serviceInstanceJob.getUri() + "/jobs/" + jobId)
-                    .accept(APPLICATION_JSON)
-                    .retrieve()
-                    .body(JobDto.class);
-            System.out.println("FDEP - JOB retrieved = job ");
+            for (JobResult jobResult : job.getJobResults()) {
+                currentJobResult = jobResult;
 
-            // get metadata about DATASET
-            ServiceInstance serviceInstanceData = discoveryClient.getInstances("dataservice").get(0);
-            DatasetDto dataset = restClient.get()
-                    .uri(serviceInstanceData.getUri() + "/datasets/" + job.getDataset())
-                    .accept(APPLICATION_JSON)
-                    .retrieve()
-                    .body(DatasetDto.class);
-            System.out.println("FDEP - JOB retrieved = dataset ");
+                updateStatus(jobResult.getId(), JobStatus.RUNNING, serviceInstanceJob);
+                System.out.println("FDEP - JOB running: " + job.getId());
 
-            // download DATASET content
-            ResponseEntity<Resource> response = restClient.get()
-                    .uri(serviceInstanceData.getUri() + "/datasets/" + dataset.getId() + "/file")
-                    .retrieve()
-                    .toEntity(Resource.class);
-            System.out.println("FDEP - JOB retrieved = file ");
+                System.out.println("FDEP - JOB started at TIME: " + jobResult.getStartTime());
 
-            // store DATASET locally
-            Path targetPathDataset = Paths.get("tmp/datasets/job-" + jobId + "." + dataset.getFileFormat().toString().toLowerCase());
-            Files.createDirectories(targetPathDataset.getParent());
+                // TODO metriky algoritmu
 
+                FdepSpark algorithm = new FdepSpark();
+                jobResult.setStartTime(System.currentTimeMillis());
+                monitorService.startMonitoring(jobResult.getId());
 
-            Resource file = response.getBody();
-            if (file != null) {
+                List<_FunctionalDependency> foundFds = algorithm.startAlgorithm(datasetData.targetPathDataset,
+                        datasetData.dataset.getName(), job.getSkipEntries(), job.getLimitEntries(), job.getMaxLHS(),
+                        datasetData.dataset.getFileFormat(), datasetData.dataset.getHeader(), datasetData.dataset.getDelim());
 
-                try (InputStream in = file.getInputStream()) {
+                monitorService.stopMonitoring(jobResult.getId());
+                jobResult.setEndTime(System.currentTimeMillis());
+                jobResult.setSnapshots(monitorService.getSnapshots(jobResult.getId()));
+                algorithm = null;
 
-                    Files.copy(in, targetPathDataset, StandardCopyOption.REPLACE_EXISTING);
-                }
-            }
-            else {
-                throw new IOException("Dataset is empty");
+                System.out.println("FDEP - JOB Spark finished at TIME: " + jobResult.getEndTime());
+
+                processOneJobResult(new JobResultsFDs(jobResult, foundFds), job.getId());
+                //jobResultsFD.foundFds.addAll(foundFds);
+
+                updateStatus(jobResult.getId(), JobStatus.DONE, serviceInstanceJob);
+
+                // TODO odoslat RESULTS na JOB microservice
             }
 
-            jobResult.setStartTime(System.currentTimeMillis());
-
-            System.out.println("FDEP - JOB started at TIME: " + jobResult.startTime);
-
-            // TODO metriky algoritmu
-
-            FdepSpark algorithm = new FdepSpark();
-            List<_FunctionalDependency> foundFds = algorithm.startAlgorithm(targetPathDataset, dataset.getName(), job.getSkipEntries(), job.getLimitEntries(), job.getMaxLHS(), dataset.getFileFormat(), dataset.getHeader(), dataset.getDelim());
-
-            jobResult.setEndTime(System.currentTimeMillis());
-            algorithm = null;
-
-            System.out.println("FDEP - JOB Spark finished at TIME: " + jobResult.endTime);
-
-            Files.deleteIfExists(targetPathDataset);
-            jobResultsFDs = new JobResultsFDs(jobResult, foundFds);
-
-            updateStatus(jobId, JobStatus.DONE, serviceInstanceJob);
+            Files.deleteIfExists(datasetData.targetPathDataset);
 
             return jobResultsFDs;
         }
         catch (IOException e){
-            System.err.println("IOEX Error starting job " + jobId + ": " + e.getMessage());
-            updateStatus(jobId, JobStatus.FAILED, serviceInstanceJob);
+
+            if (currentJobResult != null) {
+                System.err.println("IOEX Error starting job " + currentJobResult.getId() + ": " + e.getMessage());
+                updateStatus(currentJobResult.getId(), JobStatus.FAILED, serviceInstanceJob);
+            }
         }
         catch (Exception e) {
-            System.err.println("Error starting job " + jobId + ": " + e.getMessage());
-            updateStatus(jobId, JobStatus.FAILED, serviceInstanceJob);
+
+            if (currentJobResult != null) {
+                System.err.println("Error starting job " + currentJobResult.getId() + ": " + e.getMessage());
+                updateStatus(currentJobResult.getId(), JobStatus.FAILED, serviceInstanceJob);
+            }
         }
 
         return null;
     }
 
-    private void processResult(JobResultsFDs jobResultsFDs) {
+    public record DatasetData(
 
-        // TODO vystupne FD ulozit do suboru a poslat na JOBService
-        System.out.println("FDEP Processing result of job");
+            DatasetDto dataset,
+            Path targetPathDataset
+    ) implements Serializable {};
+
+    private DatasetData getMetadataAndDownloadDataset(JobDto job) throws IOException {
+        // get metadata about DATASET
+        ServiceInstance serviceInstanceData = discoveryClient.getInstances("dataservice").getFirst();
+        DatasetDto dataset = restClient.get()
+                .uri(serviceInstanceData.getUri() + "/datasets/" + job.getDataset())
+                .accept(APPLICATION_JSON)
+                .retrieve()
+                .body(DatasetDto.class);
+        System.out.println("FDEP - JOB retrieved = dataset ");
+
+        // download DATASET content
+        ResponseEntity<Resource> response = restClient.get()
+                .uri(serviceInstanceData.getUri() + "/datasets/" + dataset.getId() + "/file")
+                .retrieve()
+                .toEntity(Resource.class);
+        System.out.println("FDEP - JOB retrieved = file ");
+
+        // store DATASET locally
+        Path targetPathDataset = Paths.get("tmp/datasets/job-" + job.getId() + "." + dataset.getFileFormat().toString().toLowerCase());
+        Files.createDirectories(targetPathDataset.getParent());
+
+
+        Resource file = response.getBody();
+        if (file != null) {
+
+            try (InputStream in = file.getInputStream()) {
+
+                Files.copy(in, targetPathDataset, StandardCopyOption.REPLACE_EXISTING);
+            }
+        }
+        else {
+            throw new IOException("Dataset is empty");
+        }
+
+        return new DatasetData(dataset, targetPathDataset);
+    }
+
+    private List<JobResultsFDs> generateOutputJobResults(List<JobResult> jobResults) {
+
+        List<JobResultsFDs> jobResultsFDs = new ArrayList<>();
+
+        for (JobResult jobResult : jobResults) {
+
+            jobResultsFDs.add(new JobResultsFDs(jobResult, new LinkedList<>()));
+        }
+
+        return jobResultsFDs;
+    }
+
+    @Async
+    protected void processOneJobResult(JobResultsFDs jobResultsFDs, long jobId) {
+
+        System.out.println("FDEP Processing result of ONE JOB");
         if (jobResultsFDs == null) {
 
             return;
         }
 
         try{
-            jobResultsFDs.jobResult.numFoundFd = jobResultsFDs.foundFds.size();
+            Path foundFdsFilePath = saveFoundFdsToResultFile(jobResultsFDs, jobId);
 
-            Path targetPathResult = getFdsResultFilePath(jobResultsFDs.jobResult.jobId);
-            Files.createDirectories(targetPathResult.getParent());
+            sendResultsToJobService(jobResultsFDs.jobResult, foundFdsFilePath);
 
-            Files.createFile(targetPathResult);
+            System.out.println("FDEP Processing finished successfully");
+        }
+        catch (FileAlreadyExistsException e){
+            System.out.println("FDEP Processing already exists");
+        }
+        catch (IOException e){
+            System.out.println("FDEP Processing failed" + e.getMessage());
+        }
+    }
 
-            FileWriter writer = new  FileWriter(getFdsResultFilePath(jobResultsFDs.jobResult.jobId).toFile());
+    private void processResults(List<JobResultsFDs> jobResultsFDs, long jobId) {
 
-            for (_FunctionalDependency fd : jobResultsFDs.foundFds) {
+        // TODO vystupne FD ulozit do suboru a poslat na JOBService
+        System.out.println("FDEP Processing result of job");
+        if (jobResultsFDs == null || jobResultsFDs.isEmpty()) {
 
-                writer.write(fd.toString()+"\n");
+            return;
+        }
+
+        try{
+
+            for (JobResultsFDs jobResultsFD : jobResultsFDs) {
+
+                Path foundFdsFilePath = saveFoundFdsToResultFile(jobResultsFD,  jobId);
+
+                sendResultsToJobService(jobResultsFD.jobResult, foundFdsFilePath);
             }
-            writer.close();
-
-            sendResultsToJobService(jobResultsFDs.jobResult);
 
             System.out.println("FDEP Processing finished successfully");
         }
@@ -213,16 +273,36 @@ public class FdepServiceService {
 
     }
 
-    private void sendResultsToJobService(JobResult  jobResult) {
-        Path path = getFdsResultFilePath(jobResult.jobId);
 
-        if(!Files.exists(path)) {
-            System.out.println("FDEP - ERROR: " + path + " does not exist");
+    private Path saveFoundFdsToResultFile(JobResultsFDs jobResultsFDs, long jobId) throws IOException {
+
+        jobResultsFDs.jobResult.setNumFoundFd(jobResultsFDs.foundFds.size());
+
+        Path targetPathResult = getFdsResultFilePath(jobResultsFDs.jobResult, jobId);
+
+        Files.createDirectories(targetPathResult.getParent());
+        Files.createFile(targetPathResult);
+
+        FileWriter writer = new  FileWriter(targetPathResult.toFile());
+
+        for (_FunctionalDependency fd : jobResultsFDs.foundFds) {
+
+            writer.write(fd.toString()+"\n");
+        }
+        writer.close();
+
+        return targetPathResult;
+    }
+
+    private void sendResultsToJobService(JobResult  jobResult, Path foundFdsFilePath) {
+
+        if(!Files.exists(foundFdsFilePath)) {
+            System.out.println("FDEP - ERROR: " + foundFdsFilePath + " does not exist");
             return;
         }
 
         try {
-            Resource fileResource = new UrlResource(path.toUri());
+            Resource fileResource = new UrlResource(foundFdsFilePath.toUri());
 
             MultipartBodyBuilder builder = new MultipartBodyBuilder();
             builder.part("jobresult", jobResult)
@@ -230,9 +310,9 @@ public class FdepServiceService {
             builder.part("file", fileResource);
 
 
-            ServiceInstance serviceInstanceJob = discoveryClient.getInstances("jobservice").get(0);
-            String response = restClient.post()
-                    .uri(serviceInstanceJob.getUri() + "/jobs/" + jobResult.jobId + "/results")
+            ServiceInstance serviceInstanceJob = discoveryClient.getInstances("jobservice").getFirst();
+            String response = restClient.patch()
+                    .uri(serviceInstanceJob.getUri() + "/jobs/results/" + jobResult.getId())
                     .contentType(MediaType.MULTIPART_FORM_DATA)
                     .body(builder.build())
                     .retrieve()
@@ -240,7 +320,7 @@ public class FdepServiceService {
 
             System.out.println("FDEP - JOB SEND SUCCESSFULLY: " + response);
 
-            Files.deleteIfExists(path);
+            Files.deleteIfExists(foundFdsFilePath);
         }
         catch (IOException e){
             System.out.println("FDEP - JOB SENDING ERROR: " + e.getMessage());
@@ -248,13 +328,12 @@ public class FdepServiceService {
 
 
 
-
-
     }
 
-    private void updateStatus(Long jobId, JobStatus status, ServiceInstance serviceInstanceJob) {
+    // update status of ONE JOB ITERATION -> JOB status is updated/computed automaticaly in JOB SERVICE
+    private void updateStatus(Long jobResultId, JobStatus status, ServiceInstance serviceInstanceJob) {
         ResponseEntity<Void> response = restClient.patch()
-                .uri(serviceInstanceJob.getUri() + "/jobs/" + jobId + "/status")
+                .uri(serviceInstanceJob.getUri() + "/jobs/iteration/" + jobResultId + "/status")
                 .contentType(APPLICATION_JSON)
                 .body(status)
                 .retrieve()
@@ -262,9 +341,10 @@ public class FdepServiceService {
 
     }
 
-    private Path getFdsResultFilePath(Long jobId){
-
-        return Paths.get("tmp/results/job-" + jobId + "-FDs.txt");
+    private Path getFdsResultFilePath(JobResult jobResult, long jobId) {
+        // fileName: job-ID-fdep-run-#-foundFDs.txt
+        return Paths.get("tmp/results/job-" + jobId
+                + "-fdep-run-" + jobResult.getIteration() + "-foundFDs.txt");
     }
 
 
